# llvm-project

mlir/docs/Dialects/: LinearSolver.md
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir-c/Dialect/: LinearSolver.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/lib/CAPI/Dialect/: CMakeLists.txt  LinearSolver.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/standalone-linearsolver/: CMakeLists.txt
mlir/standalone-linearsolver/include/: CMakeLists.txt
mlir/standalone-linearsolver/lib/: CMakeLists.txt
mlir/standalone-linearsolver/linearsolver-opt/: CMakeLists.txt  linearsolver-opt.cpp
mlir/standalone-linearsolver/linearsolver-plugin/: CMakeLists.txt  linearsolver-plugin.cpp
mlir/standalone-linearsolver/linearsolver-translate/: CMakeLists.txt  linearsolver-translate.cpp
mlir/standalone-linearsolver/python/: CMakeLists.txt  LinearSolverExtension.cpp
mlir/standalone-linearsolver/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/standalone-linearsolver/test/CAPI/: CMakeLists.txt  linearsolver-capi-test.c
mlir/standalone-linearsolver/test/LinearSolver/: batch_test.mlir  dummy.mlir
mlir/standalone-linearsolver/test/LinearSolver/pipeline_test/: backward_substitution_test.mlir  cholesky_decomposition_test.mlir  forward_substitution_test.mlir  ilu_factorization_test.mlir  lu_factorization_test.mlir
mlir/standalone-linearsolver/test/linearsolver/: linearsolver-opt.mlir  linearsolver-pass-plugin.mlir  linearsolver-plugin.mlir  linearsolver-translate.mlir
mlir/standalone-linearsolver/test/python/: smoketest.py
(+51 files in other folders)
